Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,3 +28,5 @@ Imports:
     lubridate,
     janitor
 RoxygenNote: 7.0.0
+URL: https://github.com/jjesusfilho/tjrj
+BugReports: https://github.com/jjesusfilho/tjrj/issues
