--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: tjrj
-Title: Baixa e Organiza Julgados do TJRJ
+Title: Baixa e Organiza Dados Processuais do TJRJ
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Jose",
@@ -7,16 +7,16 @@ Authors@R:
            role = c("aut", "cre"),
            email = "jose@consudata.com.br",
            comment = c(ORCID = "https://orcid.org/0000-0001-7415-7383"))
-Description: Baixa e organiza julgados do TJRJ.
+Description: Baixa e organiza dados processuais do TJRJ.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Language: pt_BR
 LazyData: true
-Suggests: 
-    roxygen2 (>= 7.0.0)
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.0
 Imports: 
-    rlang (>= 0.1.2),
-    magrittr (>= 1.5),
+    rlang,
+    magrittr,
     stringr,
     purrr,
     dplyr,
@@ -24,9 +24,9 @@ Imports:
     tibble,
     httr,
     xml2,
-    purrrogress,
     lubridate,
-    janitor
-RoxygenNote: 7.0.0
-URL: https://github.com/jjesusfilho/tjrj
-BugReports: https://github.com/jjesusfilho/tjrj/issues
+    janitor,
+    abjutils,
+    progress,
+    rvest,
+    Hmisc
