--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,11 @@ export(as_name)
 export(enquo)
 export(enquos)
 export(expr)
+export(ler_movimentacao_tjrj)
 export(sym)
 export(syms)
+export(tjrj_baixar_cpopg)
+export(tjrj_ler_dados)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
